style css changes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link href="normalize.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <main>
+  <main class="main">
     <article>
+        <img src="avatar.png" alt="zdjecie-profilowe">
       <header>
         <h1>Imie i nazwisko</h1>
         <p>stanowisko</p>
