--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <main class="main">
-    <article>
-        <img src="avatar.png" alt="zdjecie-profilowe">
-      <header>
-        <h1>Imie i nazwisko</h1>
-        <p>stanowisko</p>
+    <article class="person">
+        <img class="person__picture" src="avatar.png" alt="zdjecie-profilowe">
+      <header class="person__info">
+        <h1 class="person__name">Imie i nazwisko</h1>
+        <p class="person__position">stanowisko</p>
       </header>
-      <p>
-        Programista z kilkunastoletnim doświadczeniem, fotograf, operator drona,
-        właściciel Sokoła Millennium (na razie tylko z Lego), prelegent i
-        szkoleniowiec. Uwielbia eksperymentować z nowymi technologiami, w swojej
+      <p class="person__description">
+        Programista z <strong class="special"> kilkunastoletnim doświadczeniem</strong>, fotograf, operator drona,
+        właściciel Sokoła Millennium (na razie tylko z Lego), <strong class="special">prelegent i
+        szkoleniowiec</strong>. Uwielbia eksperymentować z nowymi technologiami, w swojej
         twórczości ocierając się o sztukę.
-      </p>
-      <p>W sieci: Facebook, GitHub, Instagram.</p>
+      </p class="person__description">
+      <p>W sieci: <a class="person__link" href="https://www.facebook.com/">Facebook</a>, <a class="person__link" href="https://www.facebook.com/">GitHub</a>,<a class="person__link" href="https://www.instagram.com//">Instagram</a>.</p>
     </article>
   </main>
   <body></body>
